--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-dotenv==1.0.0
 python-telegram-bot==20.3
 requests==2.31.0
-torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
+transformers==4.34.1
+torch==2.1.0
 nest-asyncio==1.5.8
